// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<utils.ts> > getUserFromDb() > Checks missing data... > If data is missing, returns message 1`] = `
{
  "message": "Data missing",
  "ok": false,
  "provider": "",
}
`;

exports[`<utils.ts> > getUserFromDb() > If user does NOT exist... > Returns message 1`] = `
{
  "message": "User not found",
  "ok": false,
  "provider": "",
}
`;

exports[`<utils.ts> > getUserFromDb() > If user exists BUT password is null... > Returns message and the signup provider (Google | Facebook) 1`] = `
{
  "message": "This account uses Google authentication.",
  "ok": false,
  "provider": "Google",
}
`;

exports[`<utils.ts> > getUserFromDb() > If user exists... > Fetches user data from database 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > If user exists... > Verifies password against hashed password 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;
